made text smaller to fix carousel on mobile

--- a/src/sections/Splash/Splash.module.scss
+++ b/src/sections/Splash/Splash.module.scss
@@ -73,8 +73,8 @@
   line-height: 3.583rem;
 
   @include localMixins.media(mobile) {
-    font-size: 3.2rem;
-    line-height: 4rem;
+    font-size: 3rem;
+    line-height: 3.8rem;
   }
 }
 
